feat: add layouts

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-GOOGLE_CLIENT_ID=197823397736-eh1n562agshbe4ud4d5dhsgo2gsdfpd2.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_ID=197823397736-t2gs94geqddg6h9vfmafhac34inio0tr.apps.googleusercontent.com
+GOOGLE_SECRET=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
+AUTH_SECRET=secret
 
-NEXTAUTH_URL=http://localhost:3000/
-NEXTAUTH_SECRET=o1ONhW16UL0SHRdItUJ7E1asB+XsWod19XfG+/KtTgM=
+# DATABASE_URL="mongodb://localhost:27017/publisher"
+DATABASE_URL="mongodb+srv://nascimentotalesdev:FWbczpezwyQxOUzO@mongodb-com-next14.yoavpqx.mongodb.net/mongodb-com-next14"
+
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
