--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mime-types": "^2.1.35",
     "next": "14.2.1",
     "next-auth": "^5.0.0-beta.18",
+    "puppeteer": "^22.10.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
